chore: update to make image ghcr
