# docs/swagger.yaml
@@ -2,30 +2,23 @@ basePath: /
 definitions:
   dto.EditPasswordRequest:
     properties:
-      confirm_password:
+      new_password:
         minLength: 7
         type: string
-      newpassword:
-        minLength: 7
-        type: string
-      oldpassword:
+      old_password:
         minLength: 7
         type: string
     required:
-    - confirm_password
-    - newpassword
-    - oldpassword
+    - new_password
+    - old_password
     type: object
   dto.EditUserPinRequest:
     properties:
-      confirm_pin:
-        type: string
       newpin:
         type: string
       oldpin:
         type: string
     required:
-    - confirm_pin
     - newpin
     - oldpin
     type: object
@@ -59,6 +52,8 @@ definitions:
         type: string
       payment_method_name:
         type: string
+      phone_number:
+        type: string
       receiver_name:
         type: string
       status:
@@ -87,14 +82,14 @@ definitions:
     type: object
   dto.ResetPasswordRequest:
     properties:
-      password_baru:
+      password:
         example: rahasia123
         minLength: 6
         type: string
       token:
         type: string
     required:
-    - password_baru
+    - password
     - token
     type: object
   dto.Response:
@@ -575,7 +570,7 @@ paths:
         in: formData
         name: phone
         type: string
-      - description: Profile photo (jpg, jpeg, png, webp, max 2MB)
+      - description: Profile photo (jpg, jpeg, png, max 2MB)
         in: formData
         name: photo
         type: file
